Wrong hair shading in particle edit mode #57930

Closed
opened 2018-11-19 12:35:00 +01:00 by Sergey Sharybin · 7 comments

System Information

Debian Buster 64bit, GTX1080 390.87

Blender Version

Broken: b0c463a274
Worked: never, at least never good and probably never in 2.8 branch.

Short description of error

Hair is shaded using direction of strands as the color. Ideally, need to be the same as LookDev or something closer to the final shader.

Exact steps for others to reproduce the error

Open the attached file and observe the rainbow colors.. hair_edit.blend

**System Information** Debian Buster 64bit, GTX1080 390.87 **Blender Version** Broken: b0c463a274 Worked: never, at least never good and probably never in 2.8 branch. **Short description of error** Hair is shaded using direction of strands as the color. Ideally, need to be the same as LookDev or something closer to the final shader. **Exact steps for others to reproduce the error** Open the attached file and observe the rainbow colors.. [hair_edit.blend](https://archive.blender.org/developer/F5635485/hair_edit.blend)
Author
Owner

Added subscriber: @Sergey

Added subscriber: @Sergey

Added subscriber: @dddstudio

Added subscriber: @dddstudio

I thought it is a feature, not a bug :)

BTW: Switching between object and edit modes crash Blender with edited hair. Can you take a look? (#57907)
Your fix for the particle edit-edit modes worked perfectly. Thanks!

I thought it is a feature, not a bug :) BTW: Switching between object and edit modes crash Blender with edited hair. Can you take a look? (#57907) Your fix for the particle edit-edit modes worked perfectly. Thanks!
Member

Added subscribers: @fclem, @lichtwerk

Added subscribers: @fclem, @lichtwerk
Clément Foucault was assigned by Philipp Oeser 2018-11-26 11:03:46 +01:00
Member

@fclem: mind having a look?

@fclem: mind having a look?

This issue was referenced by 0b0322099c

This issue was referenced by 0b0322099ccb99833e52196b46c144886b94428c

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#57930
No description provided.